Fixed bug with overflowing images.

--- a/static/style.css
+++ b/static/style.css
@@ -13,7 +13,6 @@ body {
 .img-root-container {
     margin:0px;
     display: flex;
-    align-content: center;
     justify-content: center;
     align-items: flex-start;
     flex-wrap: wrap;
